--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 a {
   color:black;
-  text-decoration: underline silver;
+  text-decoration:underline silver;
 }
 h1 {
   font-size:45px;
@@ -18,7 +18,11 @@ h1 {
 }
 .active {
   color:red;
-  text-decoration: underline;
+  text-decoration:underline;
+}
+.inactive {
+  color:black;
+  text-decoration:none;
 }
 #grid {
   display: grid;
