--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin:0px;
+  font-family:verdana;
 }
 a {
   color:black;
@@ -7,7 +8,7 @@ a {
 }
 h1 {
   font-size:45px;
-  text-align: center;
+  text-align:center;
   margin:0px;
   padding-top:50px;
 }
@@ -26,7 +27,7 @@ h1 {
 }
 #grid {
   display: grid;
-  grid-template-columns: 230px 1fr;
+  grid-template-columns: 250px 1fr;
 }
 #grid #contents {
   padding-left:25px;
@@ -35,7 +36,7 @@ h1 {
 #grid .table {
   font-size:20px;
   border-right:1px solid gray;
-  width:180px;
+  width:200px;
   margin:0;
   padding:20px;
   padding-left:40px;
