--- a/style.css
+++ b/style.css
@@ -52,3 +52,93 @@ h1 {
 
   }
 }
+
+
+
+
+
+/*
+  https://developer.mozilla.org/en/docs/Web/CSS/box-shadow
+  box-shadow: [inset?] [top] [left] [blur] [size] [color];
+
+  Tips:
+    - We're setting all the blurs to 0 since we want a solid fill.
+    - Add the inset keyword so the box-shadow is on the inside of the element
+    - Animating the inset shadow on hover looks like the element is filling in from whatever side you specify ([top] and [left] accept negative values to become [bottom] and [right])
+    - Multiple shadows can be stacked
+    - If you're animating multiple shadows, be sure to keep the same number of shadows so the animation is smooth. Otherwise, you'll get something choppy.
+*/
+
+
+.pulse1:hover,
+.pulse1:active {
+  -webkit-animation: pulse 1s;
+          animation: pulse 1s;
+  box-shadow: 0 0 0 100em rgba(0, 0, 255, 0);
+}
+
+.pulse2:hover,
+.pulse2:active {
+  -webkit-animation: pulse 1s;
+          animation: pulse 1s;
+  box-shadow: 0 0 0 100em rgba(0, 0, 255, 0);
+}
+
+.pulse3:hover,
+.pulse3:active {
+  -webkit-animation: pulse 1s;
+          animation: pulse 1s;
+  box-shadow: 0 0 0 100em rgba(0, 0, 255, 0);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+
+
+.pulse1 {
+  --color: #0400ff;
+  --hover: #0400ff;
+}
+
+.pulse2 {
+  --color: #f7070f;
+  --hover: #f7070f;
+}
+
+.pulse3 {
+  --color: #ffffff;
+  --hover: #ffffff;
+}
+
+button {
+  color: var(--color);
+  transition: 0.25s;
+}
+button:hover, button:active {
+  border-color: var(--hover);
+  color: #fff;
+}
+
+button {
+  background: none;
+  width: 15%;
+  border: 0px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0em;
+  padding: 0em 0em;
+}
+
+code {
+  color: #e4cb58;
+  font: inherit;
+}
